--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -8,17 +8,16 @@
 \newcommand{\Дисциплина}{<<Проектирование и архитектура программных систем>>} % для курсовой
 \newcommand{\КодСпециальности}{09.03.04} % Курсовая
 \newcommand{\Специальность}{Программная инженерия} % Курсовая
-\newcommand{\Тема}{Разработка web-сайта «Русатом – Аддитивные технологии» на платформе} % ВКР Курсовая
-\newcommand{\ТемаВтораяСтрока}{1С-Битрикс}
+\newcommand{\Тема}{Разработка web-сайта «Портфолио фотографа»} % ВКР Курсовая
 \newcommand{\ГдеПроводитсяПрактика}{Юго-Западном государственном университете} % для практики
 \newcommand{\РуководительПрактПредпр}{Куркина А. В.} % для практики
 \newcommand{\ДолжнРуководительПрактПредпр}{директор} % для практики
 \newcommand{\РуководительПрактУнивер}{Чаплыгин А. А.} % для практики
 \newcommand{\ДолжнРуководительПрактУнивер}{к.т.н. доцент} % для практики
-\newcommand{\Автор}{А. В. Тарасов}
-\newcommand{\АвторРод}{Тарасова А.В.}
-\newcommand{\АвторПолностьюРод}{Тарасова Артема Вячеславовича} % для практики
-\newcommand{\Шифр}{хх-хх-хххх}
+\newcommand{\Автор}{П. В. Орлов}
+\newcommand{\АвторРод}{Орлова П. В.}
+\newcommand{\АвторПолностьюРод}{Орлова Павла Вадимовича} % для практики
+\newcommand{\Шифр}{21-06-0124}
 \newcommand{\Курс}{3} % для практики
 \newcommand{\Группа}{ПО-11б}
 \newcommand{\Руководитель}{А. А. Чаплыгин} % для ВКР и курсовой
@@ -26,7 +25,7 @@
 \newcommand{\ЗавКаф}{А. В. Малышев} % для ВКР
 \newcommand{\ДатаПриказа}{«07» апреля 2023~г.} % для ВКР
 \newcommand{\НомерПриказа}{1505-с} % для ВКР
-\newcommand{\СрокПредоставления}{«13» июня 2023~г.} % для ВКР, курсового
+\newcommand{\СрокПредоставления}{«24» января 2024~г.} % для ВКР, курсового
 
 \begin{document}
 \maketitle
