--- a/LaTeX/Введение.tex
+++ b/LaTeX/Введение.tex
@@ -1,19 +1,14 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
+Фотография, как искусство, переживает новый виток развития, и виртуозные работы фотографов становятся неотъемлемой частью этой эпохи. В современном цифровом мире, где каждое мгновение можно запечатлеть, веб-сайт портфолио фотографа выступает важным инструментом для демонстрации его творческого потенциала и профессиональных навыков.
 
-Аддитивные технологии (АТ) начали активно развиваться со времени получения первых трехмерных изображений изделий на дисплеях компьютеров. Начало положила стереолитография, затем довольно многочисленные новые принципы стали называть технологиями быстрого прототипирования, затем укоренилось название "<Аддитивные технологии">. Интенсивность развития данных технологий не имеет аналогов. АТ изменили процессы проектирования и конструирования изделий, превратив их в процессы непрерывного создания изделий. Современные проектирование и производство изделий невозможно представить без данного рода технологий. 3D-принтеры стали такими же распространенными, как и персональные компьютеры. С помощью 3D-принтеров получают ткани, обувь, продукты питания, а также выращивают человеческие органы. Во многих отраслях, например, в космической отрасли, альтернативы аддитивным технологиям нет.
+Наш веб-сайт представляет собой виртуальную выставку, где каждое изображение – это не просто фотография, а произведение искусства. Мы стремимся подчеркнуть индивидуальность и талант каждого фотографа через высококачественные фотографии, оригинальный дизайн и легкость навигации.
 
-АТ предполагают изготовление детали методом послойного нанесения материала, в отличие от традиционных методов формирования детали, за счёт удаления материала из массива заготовки.
+Цель нашего веб-сайта – не только предоставить вам возможность насладиться красотой фотографий, но и сделать ваш выбор проще, предоставив подробные описания каждой работы. Мы стремимся создать уникальное визуальное пространство, которое погружает посетителя в мир фотографии.
 
-При использовании АТ все стадии реализации проекта от идеи до материализации находятся в единой технологической цепи, в которой каждая технологическая операция выполняется в цифровой CAD/CAM/CAE-системе.
+В процессе разработки веб-сайта мы уделили особое внимание галерее высококачественных изображений, описанию каждой работы, созданию оригинального визуального стиля и использованию современных технологий для обеспечения удобства взаимодействия с нашим контентом.
 
-Современные компании, видя, как развиваются информационные технологии, пытаются использовать их выгодно для своего бизнеса, поэтому запускают свой web-сайт. С его помощью предприятие может заявить о себе, проинформировать потенциального заказчика об услугах или продуктах, которые предоставляет, а также позволяет пользователям сделать с помощью сайта онлайн-заказ, произвести покупку или оплатить счета.
-
-Сайт считается лицом компании и может существенно повысить ее имидж. Любой пользователь сети Интернет сможет получить необходимую информацию о компании в любой момент, появляется возможность найти контактные телефоны, адрес и e-mail, чтобы связаться с компанией. Сейчас большинство клиентов узнают о ее существовании именно через сайт. Поэтому сайт можно назвать самой лучшей рекламой. 
-
-Главной задачей профессионально построенного сайта является превращение посетителя, зашедшего на сайт, в потенциального клиента.
-
-\emph{Цель настоящей работы} – разработка web-сайта компании для привлечения новой аудитории, увеличения заказов, рекламы продукции и услуг компании. Для достижения поставленной цели необходимо решить \emph{следующие задачи:}
+\emph{Цель настоящей работы} – разработка web-сайта портфолио фотографа для привлечения новой аудитории, увеличения заказов и услуг компании. Для достижения поставленной цели необходимо решить \emph{следующие задачи:}
 \begin{itemize}
 \item провести анализ предметной области;
 \item разработать концептуальную модель web-сайта;
@@ -23,15 +18,16 @@
 
 \emph{Структура и объем работы.} Отчет состоит из введения, 4 разделов основной части, заключения, списка использованных источников, 2 приложений. Текст выпускной квалификационной работы равен \formbytotal{page}{страниц}{е}{ам}{ам}.
 
-\emph{Во введении} сформулирована цель работы, поставлены задачи разработки, описана структура работы, приведено краткое содержание каждого из разделов.
 
-\emph{В первом разделе} на стадии описания технической характеристики предметной области приводится сбор информации о деятельности компании, для которой осуществляется разработка сайта.
+\emph{Во введении} мы ставим перед собой задачу создания веб-портфолио, которое не только подчеркнет уникальный стиль и творческий подход фотографа, но и станет эффективным инструментом для привлечения новых клиентов. Мы расскажем о целях работы, опишем структуру веб-сайта и предоставим краткое содержание каждого из его разделов.
 
-\emph{Во втором разделе} на стадии технического задания приводятся требования к разрабатываемому сайту.
+\emph{В первом разделе} на этапе анализа предметной области мы предпримем шаг в мир фотографии, изучив стиль, особенности и основные работы нашего фотографа. Это позволит нам лучше понять требования к веб-портфолио.
 
-\emph{В третьем разделе} на стадии технического проектирования представлены проектные решения для web-сайта.
+\emph{Во втором разделе} на этапе технического задания мы выявим основные требования к веб-сайту. Здесь мы определим, какие функциональности будут доступны посетителям, как обеспечим удобство навигации, и какие дополнительные элементы дизайна мы внедрим.
 
-\emph{В четвертом разделе} приводится список классов и их методов, использованных при разработке сайта, производится тестирование разработанного сайта.
+\emph{В третьем разделе} на этапе технического проектирования мы представим концептуальные идеи для дизайна веб-портфолио. Здесь мы обсудим, каким образом выделить каждую фотографию, как организовать галерею и каким образом донести творческую индивидуальность фотографа через визуальный стиль.
+
+\emph{В четвертом разделе} мы представим список ключевых компонентов веб-портфолио и их функциональные возможности. Кроме того, мы расскажем о процессе тестирования, который гарантирует корректную работу веб-сайта и соответствие всем требованиям.
 
 В заключении излагаются основные результаты работы, полученные в ходе разработки.
 
