--- a/LaTeX/ТехЗадание.tex
+++ b/LaTeX/ТехЗадание.tex
@@ -1,32 +1,33 @@
 \section{Техническое задание}
 \subsection{Основание для разработки}
 
-Основанием для разработки является задание на курсовую работу "<Разработка web-сайта \textquotedbl Личный блог\textquotedbl\ на языке Python">.
+Основанием для разработки является задание на курсовую работу "<Разработка web-сайта \textquotedbl Портфолио фотографа\textquotedbl\".
 
 \subsection{Цель и назначение разработки}
 
 Основной задачей выпускной квалификационной работы является 
-разработка сайта-блога.
+разработка сайта-портфолио фотографа.
 
 Задачами данной разработки являются:
 \begin{itemize}
-\item создание раздела сайта с постами.;
-\item реализация формы для добавления постов.;
+\item создание раздела сайта с фотографиями.;
+\item реализация формы для добавления фотографий.;
 \end{itemize}
 
 \subsection{Требования пользователя к интерфейсу web-сайта}
 
 Сайт должен включать в себя:
 \begin{itemize}
-    \item Навигацию по постам.;
-    \item авторизацию;
-    \item доступы для администратора, пользователя.
+    \item навигацию по фотографиям.;
+    \item авторизацию в административную панель.;
+    \item доступы для администратора, пользователя.;
+    \item возможность добавления фотографий.;
 \end{itemize}
 
 Композиция шаблона сайта представлена на рисунке ~\ref{maket:image}.
 
 \begin{figure}[ht]
-\includegraphics[width=1\linewidth]{maket}
+\includegraphics[width=1\linewidth]{плакат1.png}
 \caption{Композиция шаблона сайта}
 \label{maket:image}
 \end{figure}
@@ -42,9 +43,9 @@
 
 На основании анализа предметной области в программе должны быть реализованы следующие прецеденты:
 \begin{enumerate}
-\item Авторизация.
-\item Просмотр постов.
-\item Выбор темы.
+\item Авторизация администратора.
+\item Просмотр фотографий.
+\item Добавление фотографий.
 \end{enumerate}
 
 \subsection{Требования к оформлению документации}
