--- a/LaTeX/ТехПроект.tex
+++ b/LaTeX/ТехПроект.tex
@@ -1,147 +1,99 @@
 \section{Технический проект}
 \subsection{Общая характеристика организации решения задачи}
 
-Необходимо спроектировать и разработать сайт, который должен способствовать продвижению компании на рынке.
+Необходимо спроектировать и разработать сайт портфолио, который должен способствовать продвижению фотографа в социальных сетях и на рынке.
 
-Интернет-сайт представляет собой набор взаимосвязанных электронных страниц, которые сгруппированы по разделам, содержащие текстовую, графическую, а также мультимедийную информацию (изображения, видеоролики и пр.). Сайт располагается в Интернете по определенному адресу – доменному имени сайта в виде www.имя\_сайта.ru. Каждая страница web-сайта – это текстовый документ, написанный на языке программирования (HTML, CSS, JavaScript и т.д.).
+Интернет-сайт портфолио представляет собой набор взаимосвязанных электронных страниц, которые сгруппированы по разделам, содержащие текстовую, графическую информацию (изображения). Каждая страница web-сайта – это текстовый документ, написанный на языке программирования (HTML, CSS, JavaScript, Python).
 
 \subsection{Обоснование выбора технологии проектирования}
 
-На сегодняшний день информационный рынок, поставляющий программные решения в выбранной сфере, предлагает множество продуктов, позволяющих достигнуть поставленной цели – разработки web-сайта.
+В современном мире, где визуальное восприятие играет ключевую роль, создание веб-сайта для портфолио фотографа становится неотъемлемой частью представления своего творчества. Информационное пространство, насыщенное разнообразными программными решениями, предоставляет множество инструментов, способных подчеркнуть уникальность и профессионализм в области фотографии.
 
 \subsubsection{Описание используемых технологий и языков программирования}
 
 В процессе разработки web-сайта используются программные средства и языки программирования. Каждое программное средство и каждый язык программирования применяется для круга задач, при решении которых они необходимы.
 
-\subsubsection{Язык программирования PHP}
+\subsubsection{Язык программирования Python}
 
-PHP – язык для написания сценариев, исполняемых на компьютере web-приложения посредством интерпретации исходного кода \cite{php}. Основное предназначение данного языка – это выполнение на сервере сценариев, создающих динамические web-страницы.
+Python — это универсальный язык программирования, который также может использоваться для веб-разработки. Существует несколько фреймворков, таких как Django и Flask, которые позволяют разрабатывать веб-приложения на Python. Python обеспечивает чистый синтаксис, богатую стандартную библиотеку и поддержку объектно-ориентированного программирования, что делает его популярным выбором для веб-разработчиков.
 
 \subsubsection{Язык программирования JavaScript}
 
 \paragraph{Достоинства языка JavaScript}
 
-JavaScript – объектно-ориентированный язык программирования для написания сценариев \cite{javascript}. Чаще всего JavaScript используется для написания сценариев работы с web-страницами, отображаемыми web-браузером. Web-бра\-у\-зер интерпретирует код сценария языка JavaScript, и на основе описанных в сценарии действий производит манипуляции с разметкой web-страницы. Посредством языка JavaScript реализуется возможность программирования на стороне клиента. Предоставляет возможность доступа к элементам разметки web-страницы посредством объектов. При создании сценариев на языке JavaScript приходится сталкиваться с трудностями, связанными с тем, что различные web-браузеры могут по-разному интерпретировать эти сценарии. Серьезные трудности возникают, если какой-либо из браузеров не поддерживает тот или иной объект, метод или свойство. Наиболее практичным способом решения данной проблемы является использование библиотеки jQuery. Данная библиотека реализована на языке JavaScript и расширяет возможности данного языка, нивелируя различия между браузерами.
+JavaScript является языком программирования, который обеспечивает динамическое взаимодействие на веб-страницах. Он позволяет создавать интерактивные элементы, изменять содержимое страницы в реальном времени, выполнять асинхронные запросы к серверу и многое другое. JavaScript является одним из ключевых инструментов для создания современных, интерактивных веб-приложений.
 
-\paragraph{Недостатки языка Javascript}
+\subsection{Диаграмма представлений и схема обмена данными между представлениями}
 
-0 == []\ // -> true
-
-0 == \textquotedbl0\textquotedbl\ // -> true
-
-\textquotedbl0\textquotedbl\ == [] // -> false
-
-И еще:
-
-2 + \textquotedbl 2\textquotedbl\ // -> 22
-
-2 - \textquotedbl 2\textquotedbl\ // -> 0
-
-Это был пример раздела c нумерацией вида 1.1.1.1
-
-\subsection{Диаграмма компонентов и схема обмена данными между файлами компонента}
-
-Диаграмма компонентов описывает особенности физического представления разрабатываемой системы. Она позволяет определить архитектуру системы, установив зависимости между программными компонентами, в роли которых может выступать как исходный, так и исполняемый код. Основными графическими элементами диаграммы компонентов являются компоненты, интерфейсы, а также зависимости между ними. На рисунке \ref{comp:image} изображена диаграмма компонентов для проектируемой системы. Она включает в себя сервер с операционной системой, на которой установлена система управления содержимым, включающая в себя базу данных и интерфейс. Помимо этого на диаграмме изображен клиентский компьютер с операционной системой, на которой установлен браузер.
+Диаграмма представлений описывает особенности физического представления разрабатываемой системы. Она позволяет определить архитектуру системы, установив зависимости между программными представлений, в роли которых может выступать как исходный, так и исполняемый код. Основными графическими элементами диаграммы представлений являются представления, интерфейсы, а также зависимости между ними. На рисунке \ref{comp:image} изображена диаграмма представлений для проектируемой системы. Она включает в себя сервер с операционной системой, на которой установлена система управления содержимым, включающая в себя базу данных и интерфейс. Помимо этого на диаграмме изображен клиентский компьютер с операционной системой, на которой установлен браузер.
 
 \begin{figure}[ht]
-\center{\includegraphics[width=1\linewidth]{comp}}
-\caption{Диаграмма компонентов}
-\label{comp:image}
+	\center{\includegraphics[width=1\linewidth]{comp}}
+	\caption{Диаграмма представлений}
+	\label{comp:image}
 \end{figure}
 
-Любой компонент должен быть вызван в сценарии страницы web-сайта. Web-страница передает данные компоненту в момент вызова последнего.
+Любое представление должно быть вызвано в сценарии страницы web-сайта. Web-страница передает данные.
 
-На рисунке \ref{data:image} представлена схема обмена данными между сценариями компонента при вызове компонента на странице сайта.
+На рисунке \ref{data:image} представлена схема обмена данными между сценариями представления при вызове представления на странице сайта.
+
 
 \begin{figure}[ht]
-\center{\includegraphics[width=1\linewidth]{data}}
-\caption{Диаграмма компонентов}
-\label{data:image}
+	\center{\includegraphics[width=1\linewidth]{data}}
+	\caption{Диаграмма представлений}
+	\label{data:image}
 \end{figure}
 
-При вызове компонента в сценарии web-страницы указываются значения параметров компонента, которые далее посредством массива \$arParams передаются в сценарий файла component.php.
+В файле server.py написан код, который представляет собой простое веб-приложение на Python, использующее фреймворк WSGI (Web Server Gateway Interface).
 
-В сценарии файла component.php посредством метода \linebreak IncludeComponentTemplate класса CBitrixComponent происходит вызов одного из шаблонов компонента. Id шаблона также определяется в сценарии страницы web-приложения и неявно для разработчика передается указанный выше метод. Подключается сценарий файла template.php одного из шаблонов, в который передается, возможно, измененный в сценарии component.php массив \$arParams и, также, сформированный в сценарии component.php массив \$arResult. Оба этих массива доступны также и в файле result\_modifier.php, который подключается перед подключением файла template.php. 
-
-Работа компонента заканчивается в момент завершения работы сценария файла component.php, т.е. возможно выполнить действия уже после подключения шаблона. Однако, если массив \$arResult будет изменен в сценарии шаблона, в сценарий файла компонента component.php измененные данные переданы не будут.
+Здесь импортируются различные библиотеки, классы и функции, которые используются в приложении, такие как CGI, Waitress для веб-сервера, различные представления (views) и функции для работы с файлами и базой данных. Словарь urls соотносит URL-пути с соответствующими представлениями. Когда приходит запрос, код использует этот словарь для определения, какой обработчик использовать для данного URL. Основная функция app обрабатывает POST запрос для загрузки файла, извлекает данные из формы, вставляет изображение в БД и возвращает ответ в формате JSON. Обработка GET запроса происходит с логики определения и вызова соответствующего представления и логики для обработки статических файлов, определение MIME-типа и кодировки для ответа, а также установка заголовков ответа и возврат данных в ответе.
 
 \subsection{Диаграмма размещения}
 
-Диаграмма размещения (рис.~\ref{place:image}) отражает физические взаимосвязи между программными и аппаратными компонентами системы.
+Диаграмма размещения (рис. 3.2) отражает физические взаимосвязи между методами и представлениями.
 
-\vspace{-8mm} % чтобы убрать пустую строку, которая осталась после переноса рисунка на следующую страницу
 \begin{figure}[ht]
-\center{\includegraphics[width=0.57\linewidth]{place}}
-\caption{Диаграмма размещения. Не помещается на страницу. Очень длинный заголовок}
-\label{place:image}
+	\center{\includegraphics[width=0.57\linewidth]{place}}
+	\caption{Диаграмма размещения}
+	\label{place:image}
 \end{figure}
 
 Она является хорошим средством для показа маршрутов перемещения объектов и компонентов в распределенной системе.
 
-В таблице \ref{ssevsws:table} приведен пример использования пакета xltabular с автоматическим расчетом ширины столбца.
-
-\begin{xltabular}{\textwidth}{|c|X|X|}
-	\caption{Сравнение протоколов SSE и WebSocket\label{ssevsws:table}}\\ \hline
-	~  & \centrow  SSE & \centrow WebSocket \\ \hline
-	\endfirsthead
-	\continuecaption{Продолжение таблицы \ref{ssevsws:table}}
-	~ & \centrow SSE & \centrow WebSocket \\ \hline 
-	\finishhead
-	Направленность & 
-	Однонаправленный, полудуплексный: данные посылает только сервер & 
-	Двунаправленный, полнодуплексный: и сервер, и клиент могут обмениваться сообщениями \\ \hline 
-	Соединение  & HTTP & WS \\ \hline 
-	Тип данных & Только текст & Бинарные и текстовые данные \\ \hline 
-	Доп. возможности & Встроенный механизм идентификаторов событий и переподключения & Переподключение и идентификация события реализуются на стороне приложения
-\end{xltabular}
-
 \subsection{Содержание информационных блоков. Основные сущности}
 
-Проанализировав требования, можно выделить шесть основных сущностей:
+Проанализировав требования, можно выделить две основных сущности:
 \begin{itemize}
-\item "<Новости">;
-\item "<Продукция">;
-\item "<Услуги">.
+	\item "<Пользователь">;
+	\item "<Добавление фотографии">;
 \end{itemize}
 
-В состав сущности "<Новости"> можно включить атрибуты, представленные в таблице \ref{news:table}.
+В состав сущности "<Пользователь"> можно включить атрибуты, представленные в таблице 3.1.
 
 \begin{xltabular}{\textwidth}{|l|l|p{1.7cm}|X|}
-	\caption{Атрибуты сущности "<Новости">\label{news:table}}\\ \hline
+	\caption{Атрибуты сущности "<Пользователь">\label{news:table}}\\ \hline
 	\centrow Поле & \centrow Тип & \centrow Обяза\-тельное & \centrow Описание \\ \hline
 	\thead{1} & \thead{2} & \centrow 3 & \centrow 4 \\ \hline
 	\endfirsthead
-	\continuecaption{Продолжение таблицы \ref{news:table}}
 	\thead{1} & \thead{2} & \centrow 3 & \centrow 4 \\ \hline
 	\finishhead
-	\_id & ObjectId & true & Уникальный идентификатор \\ \hline 
-	head & String & true & Заголовок новости \\ \hline 
-	short & String & false & Аннотация к новости \\ \hline 
-	createdAt & Date & true & Время создания новости \\ \hline 
-	author & String & false & Автор новости \\ \hline 
-	content & String & true & Текст новости \\ \hline 
-	views & Integer & true & Количество просмотров новости зарегистрированными пользователями
+	id & ObjectId & true & Уникальный идентификатор \\ \hline 
+	login & String & true & Логин \\ \hline 
+	password & String & true & Пароль \\ \hline 
 \end{xltabular}
 
-Пример использования различных типов столбцов представлен в таблице \ref{prod:table}. Рекомендуется использовать пакет xltabular для создания таблиц.
+В состав сущности "<Добавление фотографии"> можно включить атрибуты, представленные в таблице 3.2.
 
-\begin{xltabular}{\textwidth}{|R|C{2.5cm}|l|T|}
-	\caption{Атрибуты  сущности "<Новости разметки в LaTeX"> с использованием различных типов столбцов и многострочным заголовком\label{prod:table}}\\ \hline
-	\centrow Поле & \centrow Тип & \centrow Обязательное & \centrow Описание \\ \hline
-	\centrow 1 & \centrow 2 & \thead{3} & \centrow 4 \\ \hline
+\begin{xltabular}{\textwidth}{|l|l|p{1.7cm}|X|}
+	\caption{Атрибуты сущности "<Добавление фотографии">\label{news:table}}\\ \hline
+	\centrow Поле & \centrow Тип & \centrow Обяза\-тельное & \centrow Описание \\ \hline
+	\thead{1} & \thead{2} & \centrow 3 & \centrow 4 \\ \hline
 	\endfirsthead
-	\continuecaption{Продолжение таблицы \ref{prod:table}}
-	\centrow 1 & \centrow 2 & \thead{3} & \centrow 4 \\ \hline
+	\thead{1} & \thead{2} & \centrow 3 & \centrow 4 \\ \hline
 	\finishhead
-	\_id & ObjectId & true & Уникальный идентификатор \\ \hline 
-	head & String & true & Заголовок новости \\ \hline 
-	short & String & false & Аннотация к новости \\ \hline 
-	createdAt & Date & true & Время создания новости \\ \hline 
-	author & String & false & Автор новости \\ \hline 
-	content & String & true & Текст новости \\ \hline 
-	views & Integer & true & Количество просмотров новости зарегистрированными пользователями
+	id & ObjectId & true & Уникальный идентификатор \\ \hline 
+	imagename & String & true & Название фото \\ \hline 
+	imagedesc & String & true & Описание фото \\ \hline 
+	imagecountry & String & true & Страна, где сделано фото \\ \hline 
+	image & LONGBLOB & true & Фото \\ \hline 
 \end{xltabular}
-
-В системе предусмотрен внутренний механизм связи между разделами и элементами информационных блоков, поэтому введения дополнительных идентификаторов при реализации связей между сущностями не предполагается.
-
-Экземпляры сущностей реализуются в информационных блоках посредством элементов, атрибуты сущности – посредством полей и свойств элемента. 
