--- a/LaTeX/Анализ.tex
+++ b/LaTeX/Анализ.tex
@@ -1,21 +1,21 @@
 \section{Анализ предметной области}
-\subsection{Характеристика предприятия и его деятельности. Тест длинного заголовка, не должен содержать переносы}
+\subsection{Характеристика сайта портфолио и его цели, задачи.}
 
-Технология трёхмерной печати появилась в конце 80-х гг. ХХ в. Пионером в этой области является компания 3D Systems, которая разработала первую коммерческую стереолитографическую машину – SLA – \linebreak Stereolithography Apparatus (1986 г.). До середины 90-х гг. она использовалась в научно-исследовательской и опытноконструкторской деятельности, связанной с оборонной промышленностью. Первые лазерные машины – сначала стереолитографические (SLA-машины), затем порошковые (SLS-машины) – были чрезмерно дороги, а выбор модельных материалов скромный. Широкое распространение цифровых технологий в области проектирования (CAD), моделирования и расчётов (CAE) и механообработки (CAM) стимулировало развитие технологий 3D-печати. 
+В мире фотографии происходят удивительные изменения, подобно тому, как в свое время технология трехмерной печати изменила производственные процессы. Как и в случае с пионерами в области 3D-печати, мы стремимся создать нечто уникальное, что подчеркнет не только профессионализм, но и творческий подход к миру фотографии.
 
-Термин "<аддитивные технологии"> (АТ) означает изготовление изделия путем добавления. АТ являются новыми методами в производстве различного рода изделий. Применение данных технологий допускает как создание изделий с нуля, так и обработку уже имеющихся. Сегодня трудно найти отрасль производства, где бы ни применялись 3D-принтеры: с их помощью изготавливаются детали самолетов, космических аппаратов, подводных лодок, инструменты, протезы и др.
+В данном введении мы ставим перед собой задачу представить вам веб-портфолио, которое будет не просто коллекцией фотографий, а настоящим отражением стиля и индивидуальности фотографа. Мы приглашаем вас на увлекательное путешествие по миру изысканной фотографии, где каждое изображение рассказывает свою уникальную историю.
 
-АТ предполагают изготовление (построение) физического объекта (детали) методом послойного нанесения материала, в отличие от традиционных методов формирования детали, за счёт удаления материала из массива заготовки.
+Мы сосредотачиваемся не только на технических аспектах фотографии, но и на том, как каждый кадр может передать эмоции, заставить задуматься и оставить неизгладимый след в воспоминаниях. Приготовьтесь к увлекательному погружению в мир визуального искусства, представленного нашим веб-портфолио.
 
-АТ охватывают все новые сферы деятельности человека. Дизайнеры, архитекторы, кондитеры, археологи, астрономы, палеонтологи и представители других профессий используют 3D-принтеры для реализации различных идей и проектов. 
+В каждом разделе нашего сайта вы обнаружите не только тщательно подобранные работы, но и немного истории, лежащей в их основе. Мы уверены, что это веб-портфолио станет не просто каталогом фотографий, а настоящим путеводителем по миру наших творческих идей и профессиональных достижений. Добро пожаловать в наше виртуальное пространство, где каждое изображение — это уникальная история, рассказанная объективом фотокамеры.
+\subsection{Технологии и инструменты для разработки веб-сайта}
 
-Деятельность отраслевого интегратора "<Русатом -- Аддитивные технологии"> охватывает все составляющие аддитивного рынка: производство 3D-принтеров, выпуск оборудования для создания порошков, разработка программного обеспечения и организация центров аддитивного производства. Сегодня аддитивные технологии внедряются в самые сложные и наукоемкие отрасли: атомную промышленность, аэрокосмическую индустрию, медицину, автомобилестроение и многие другие. Применение АТ решает задачи по снижению стоимости, сокращения срока изготовления изделий и обеспечение высокой персонализации деталей.
-\subsection{Аддитивные технологии, их классификация}
+HTML — это основной язык разметки веб-страниц. С его помощью создаются структура и содержание веб-сайта. HTML предоставляет различные элементы, такие как заголовки, параграфы, изображения, ссылки и многое другое, для организации информации на странице. Он является основой веб-разработки и используется в сочетании с другими технологиями, такими как CSS и JavaScript.
 
-Основное преимущество АТ состоит в том, что прототип создается за один прием, а исходными данными для него служит геометрическая модель детали. В итоге отпадает необходимость в планировании последовательности технологических процессов, специальном оборудовании для обработки материалов, транспортировке от станка к станку и т. д.
+CSS используется для стилизации веб-страниц и придания им визуального оформления.
 
-Экструзионная печать. Включает такие методы, как послойное наплавление и многоструйная печать.
+JavaScript является языком программирования, который обеспечивает динамическое взаимодействие на веб-страницах. 
 
-Стереолитография. Стереолитографические принтеры используют специальные жидкие материалы, называемые "<фотополимерными смолами">.
+Python — это универсальный язык программирования, который также может использоваться для веб-разработки.
 
-Ламинирование. Слои материала наклеиваются друг на друга и обрезаются по контурам цифровой модели с помощью лазера или лезвия. 
+MySQL — это система управления базами данных (СУБД), широко используемая в веб-разработке для хранения и управления данными.
