--- a/LaTeX/Заключение.tex
+++ b/LaTeX/Заключение.tex
@@ -1,20 +1,17 @@
 \section*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 
-Преимущества аддитивных технологий заключается в разнообразии процессов, позволяющих применять их в различных областях производства. Существенным ограничением же является и экономическая составляющая, которая не позволит внедрить аддитивное производство повсеместно.
-  
-Компании, видя, как развиваются информационные технологии, пытаются использовать их выгодно для своего бизнеса, запуская свой сайт для того, чтобы заявить о своем существовании, проинформировать потенциального клиента об услугах или продуктах, которые предоставляет. 
-Для продвижения компании «Русатом – Аддитивные технологии» был разработан веб-сайт на основе системы «1С-Битрикс: Управление сайтом».
+Преимущества веб-сайта портфолио фотографа заключаются в возможности эффективного представления творческих работ и привлечении потенциальных клиентов. Существенным ограничением может быть конкуренция в индустрии и необходимость постоянного обновления контента для поддержания интереса к портфолио.
+
+Фотограф, наблюдая за развитием информационных технологий, стремится использовать их в своей работе, запуская свой веб-сайт. Это позволяет ему заявить о своем творчестве, предоставить информацию о своих услугах и поделиться своим портфолио с потенциальными заказчиками.
 
 Основные результаты работы:
 
 \begin{enumerate}
-\item Проведен анализ предметной области. Выявлена необходимость использовать 1С-Битрикс.
-\item Разработана концептуальная модель web-сайта. Разработана модель данных системы. Определены требования к системе.
-\item Осуществлено проектирование web-сайта. Разработана архитектура серверной части. Разработан пользовательский интерфейс web-сайта.
-\item Реализован и протестирован web-сайт. Проведено модульное и системное тестирование.
+	\item Проведен анализ требований для веб-сайта портфолио фотографа. Выбрана платформа для разработки.
+	\item Разработана концептуальная модель веб-сайта. Выполнено проектирование структуры и дизайна сайта.
+	\item Осуществлена реализация и тестирование веб-сайта. Проведено модульное и системное тестирование функциональности.
+	\item Готовый проект представлен адаптивным дизайном, обеспечивающим корректное отображение на различных устройствах.
 \end{enumerate}
 
-Все требования, объявленные в техническом задании, были полностью реализованы, все задачи, поставленные в начале разработки проекта, были также решены.
-
-Готовый рабочий проект представлен адаптивной версткой сайта. Сайт находится в публичном доступе, поскольку опубликован в сети Интернет.  
+Все задачи, поставленные в начале разработки веб-сайта портфолио фотографа, были успешно выполнены. Сайт доступен в сети Интернет, предоставляя возможность потенциальным клиентам ознакомиться с творческим портфолио фотографа.
