--- a/LaTeX/ЛистЗадания.tex
+++ b/LaTeX/ЛистЗадания.tex
@@ -51,22 +51,18 @@
 \renewcommand\labelenumi{\theenumi)}
 
 \begin{enumerate}
-\item проанализировать IT-инфраструктуру предприятия;
-\item  разработать концептуальную модель системы управления IT-ин\-фра\-струк\-турой предприятия на основе подхода к управлению и организации ИТ-услуг ITSM;
-\item спроектировать программную систему управления IT-ин\-фра\-струк\-турой предприятия;
-\item сконструировать и протестировать программную систему управления IT-инфраструктурой предприятия.
+\item проанализировать основные критерии эффективного онлайн-портфолио;
+\item разработка концептуальной модели веб-сайта портфолио;
+\item программную систему управления веб-портфолио;
+\item сконструировать и протестировать  веб-сайт портфолио фотографа;
 \end{enumerate}
 
 {\parindent0pt
   3.2. Входные данные и требуемые результаты для программы:}
 
 \begin{enumerate}
-\item Входными данными для программной системы являются: данные
-справочников комплектующих, конфигураций, ПО, критериев качества SLA,
-ИТ-услуг, департаментов компании; технические данные ИТ-ресурсов; данные входящих заявок на ИТ-ресурсы; данные запросов поставщикам на комплектующие.
-\item Выходными данными для программной системы являются: сформированные заявки на обслуживание ИТ-ресурсов; сформированные запросы на
-закупку комплектующих; сведения о выполненных работах по заявкам; статусы заявок; выходные отчеты (инфографика) – по качеству услуг, по состоянию ИТ-ресурсов, по деятельности ИТ-отдела, по стоимости обслуживания
-ИТ-ресурсов, воронка заявок.
+\item Входными данными для веб-сайта портфолио фотографа являются: изображения и фотографии в высоком разрешении для создания портфолио, описание работ, включая дополнительные детали, метаданные и контекст, дизайнерские предпочтения и требования к визуальной составляющей веб-сайта.
+\item Выходными данными для программной системы являются: сформированные страницы портфолио с изображениями и описаниями работ, запросы и формы обратной связи для потенциальных клиентов, сведения о выполненных работах, визуальные отчеты о статусе и активности портфолио.
 \end{enumerate}
 
 {\parindent0pt
