--- a/LaTeX/РабочийПроект.tex
+++ b/LaTeX/РабочийПроект.tex
@@ -1,81 +1,63 @@
 \section{Рабочий проект}
 \subsection{Классы, используемые при разработке сайта}
 
-Можно выделить следующий список классов и их методов, использованных при разработке web-приложения (таблица \ref{class:table}). Пример таблицы с уменьшенным межстрочным интервалом.
+Можно выделить следующий список классов и их методов, использованных при разработке web-приложения (таблица \ref{class:table}).
 
 \renewcommand{\arraystretch}{0.8} % уменьшение расстояний до сетки таблицы
 \begin{xltabular}{\textwidth}{|X|p{2.5cm}|>{\setlength{\baselineskip}{0.7\baselineskip}}p{4.85cm}|>{\setlength{\baselineskip}{0.7\baselineskip}}p{4.85cm}|}
-\caption{Описание классов Bitrix, используемых в приложении\label{class:table}}\\
+\caption{Описание классов, используемых в приложении\label{class:table}}\\
 \hline \centrow \setlength{\baselineskip}{0.7\baselineskip} Название класса & \centrow \setlength{\baselineskip}{0.7\baselineskip} Модуль, к которому относится класс & \centrow Описание класса & \centrow Методы \\
 \hline \centrow 1 & \centrow 2 & \centrow 3 & \centrow 4\\ \hline
 \endfirsthead
 \caption*{Продолжение таблицы \ref{class:table}}\\
 \hline \centrow 1 & \centrow 2 & \centrow 3 & \centrow 4\\ \hline
 \finishhead
-CMain & Главный модуль & CMain – главный класс страницы web-приложения. После одного из этапов по загрузке страницы в сценарии становится доступным инициализированный системой объект данного класса с именем \$APPLICATION & void ShowTitle(string property\_code = «title», bool strip\_tags = true)
-Выводит заголовок страницы
-void SetTitle(string title)
-Устанавливает заголовок страницы
+AdminLogin & Главный модуль & AdminLogin – является наследником класса View из модуля templatesview.baseview. Класс AdminLogin предоставляет метод get, который используется для обработки HTTP GET-запросов на определенный URL. & при вызове метода get для объекта класса AdminLogin, он вернет HTML-код, сгенерированный из указанного шаблона templates/adminlogin.
 
-void ShowCSS(bool external = true, bool XhtmlStyle = true)
-Выводит таблицу стилей CSS страницы\\
-\hline CFile & Главный модуль & CFile – Класс для работы с файлами и изображениями & array GetFileArray (int file\_id)
-Метод возвращает массив, содержащий описание файла (путь к файлу, имя файла, размер) с идентификатором file\_id
+html. Этот код, используется для отображения страницы входа в админ-панель при обработке GET-запроса по соответствующему URL.\\
+\hline AdminView & Главный модуль & AdminView – является наследником класса View из модуля templatesview.baseview. Класс AdminView предоставляет метод get, который используется для обработки HTTP GET-запросов на определенный URL. & при вызове метода get для объекта класса AdminView, он вернет HTML-код, сгенерированный из указанного шаблона templates/admin.html. Этот код используется для отображения страницы админ-панели при обработке GET-запроса по соответствующему URL.\\
+
+\hline View(ABC) & Главный модуль & View(ABC) – определяет абстрактный базовый класс View, который наследуется от ABC (Abstract Base Class). & класс View служит базовым классом для других классов представлений и предоставляет атрибут template, который потомки могут использовать для указания пути к своим HTML-шаблонам. Однако, для полноценного абстрактного класса, скорее всего, потребуется дополнительное определение абстрактных методов или свойств.\\
+
+\hline HomeView & Главный модуль & HomeView – является наследником класса View из модуля templatesview.homeview. Класс HomeView предоставляет метод get, который используется для обработки HTTP GET-запросов на определенный URL. & при вызове метода get для объекта класса HomeView, он вернет HTML-код, сгенерированный из указанного шаблона templates/home.html. Этот код используется для отображения страницы админ-панели при обработке GET-запроса по соответствующему URL.\\
+
+\hline ImageView & Главный модуль & HomeView – является наследником класса View из модуля templatesview.imageview. Класс ImageView предоставляет метод get, который используется для обработки HTTP GET-запросов на определенный URL. & при вызове метода get для объекта класса ImageView, он вернет HTML-код, сгенерированный из указанного шаблона templates/images.html. Этот код используется для отображения страницы админ-панели при обработке GET-запроса по соответствующему URL.\\
+
 \end{xltabular}
 \renewcommand{\arraystretch}{1.0} % восстановление сетки
 
-\subsection{Модульное тестирование разработанного web-сайта}
-
-Модульный тест для класса User из модели данных представлен на рисунке \ref{unitUser:image}.
-
-\begin{figure}[ht]
-\begin{lstlisting}[language=Python]
-from django.test import TestCase
-from .models import *
-User = get_user_model()
-
-
-class ShpoTestCases(TestCase):
-
-    def setUp(self) -> None:
-        self.user = User.objects.create(username='testtestovich', password='testtestovich', first_name='Sad', last_name='')
-
-    def test_2(self):
-
-        self.assertEqual(self.user.first_name, 'Sad')
-        self.assertEqual(self.user.last_name, 'Cat')
-        print((self.user))
-        print((self.user.first_name))
-        print((self.user.last_name))
-\end{lstlisting}  
-\caption{Модульный тест класса User}
-\label{unitUser:image}
-\end{figure}
-
 \subsection{Системное тестирование разработанного web-сайта}
 
-На рисунке \ref{main:image} представлена главная страница сайта «Русатом – Аддитивные технологии».
+На рисунке \ref{main:image} представлена главная страница сайта портфолио фотографа.
 \newpage % при необходимости можно переносить рисунок на новую страницу
 \begin{figure}[H] % H - рисунок обязательно здесь, или переносится, оставляя пустоту
 \center{\includegraphics[width=1\linewidth]{main1}}
-\center{\includegraphics[width=1\linewidth]{main2}}
-\center{\includegraphics[width=1\linewidth]{main3}}
-\caption{Главная страница сайта «Русатом – Аддитивные технологии»}
+\caption{Главная страница сайта портфолио фотографа.}
 \label{main:image}
 \end{figure}
 
-На рисунке \ref{menu:image} представлен динамический вывод заголовков, включающий в себя искомые фразы при поиске фраз.
+На рисунке \ref{menu:image} представлена страница фотографии.
 
 \begin{figure}[ht]
 \center{\includegraphics[width=1\linewidth]{menu}}
-\caption{Динамический вывод заголовков}
+\caption{Страница фотографии}
 \label{menu:image}
 \end{figure}
 
-На рисунке \ref{enter:image} представлен ввод данных для публикации новости.
+\newpage
+На рисунке \ref{enter:image} представлена страница авторизации в административную панель.
 
 \begin{figure}[ht]
 \center{\includegraphics[width=1\linewidth]{enter}}
-\caption{Ввод данных для публикации очень-очень длинной, интересной и полезной новости}
+\caption{Страница авторизации}
 \label{enter:image}
+\end{figure}
+
+\newpage
+На рисунке 4.4 представлена страница административной панели.
+
+\begin{figure}[ht]
+	\center{\includegraphics[width=1\linewidth]{add}}
+	\caption{Страница добавления изображения}
+	\label{add:image}
 \end{figure}
